# cs348a

./: .gitignore  CMakeLists.txt  README
minmaxer/: CMakeLists.txt
minmaxer/minmaxer.bin/: testalite
minmaxer/source.triangulation/: angle.h  delaunay.h  planeSweep.h  triangulation.c  triangulation.h
src/: BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Camera.h  IntersectionInfo.cpp  IntersectionInfo.h  Main.cpp  MathEngine.h  OptimalPath.h  Ray.cpp  Ray.h  SightPath.cpp  SightPath.h  SightTree.h  TestMain.cpp  Triangle.cpp  Triangle.h  elevation.frag  elevation.vert  sample.heights  sample.mesh  sample.mesh2  sample.mesh3  sample.tour  sample.triangles  sample.triangles2  terrain.cpp  terrain.h  texture.data
